# patchy

./: .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  .grype.yaml  .licenseignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile.agent-runner  Dockerfile.controller  Makefile  README.md  SECURITY.md  go.mod  go.sum  mise.toml  pyproject.toml  release-please-config.json  tasks.toml  zensical.toml
.claude/: settings.json
.github/: dependabot.yaml
.github/workflows/: add-to-project.yaml  ci.yaml  dependabot-merge.yaml  helm.yaml  merge-notice.yaml  merge-review-ack.yaml  merge.yaml  release.yaml  security.yaml
.kubescape/: README.md  exceptions.json
api/v1alpha1/: common_types.go  conditions.go  doc.go  finding_types.go  findingrollup_types.go  forge_types.go  groupversion_info.go  integration_types.go  investigation_types.go  remediation_types.go  repository_types.go  schema_envtest_test.go  transitions.go  transitions_test.go  zz_generated.deepcopy.go
charts/patchy/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/patchy-config/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
cmd/agent-runner/: main.go
cmd/context-controller/: main.go  serve.go
cmd/integration-controller/: main.go  serve.go
cmd/investigation-controller/: main.go  serve.go
deploy/: README.md
docs/: demo.md  extending.md  status-ui.md
hack/: boilerplate.go.txt  build.sh  codegen.sh  dev-colima.sh  envtest.sh  helm-lint.sh  status-demo.sh
overrides/: demo.html
(+307 files in other folders)
